# UltimateTrainingModpack

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Makefile  README.md  T_test.txt  Xargo.toml  aarch64-roblabla-switch.json  aarch64-skyline-switch.json  build.bat  check.bat  full_build.sh  install.bat  libtraining_modpack.nro  link.T  link.ld  run.bat  rust-toolchain  ryujinx_build.ps1  ryujinx_build.sh  saltysd_plugin_example.elf  set_txt_num_01.txt  switch.specs
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-debian.sh  docker-debian.sh
.github/workflows/: ccpp.yml  rust.yml
SaltySD/: exceptions.txt  saltysd_core.elf  saltysd_proc.elf
TrainingModpackOverlay/: .clang-format  Makefile  README.md
TrainingModpackOverlay/include/: clickable_list_item.hpp  cpp_utils.hpp  dir_iterator.hpp  gui_help.hpp  gui_main.hpp  gui_sublist.hpp  ini_settings.hpp  overflow_list.hpp  overlay_frame_with_help.hpp  taunt_toggles.hpp  value_list_item.hpp
TrainingModpackOverlay/source/: dir_iterator.cpp  gui_main.cpp  gui_sublist.cpp  main.cpp
atmosphere/contents/0000000000534C56/: exefs.nsp
atmosphere/contents/0100000000534C56/: exefs.nsp
extern_alloc/: Cargo.toml
extern_alloc/src/: lib.rs
locales/: en_US.json  en_us.json  fr.json
romfs/: msg_melee+us_en.msbt  msg_melee+us_en.xmsbt  msg_melee_edited.msbt
skyline/: Cargo.toml
skyline/nn/: Cargo.toml
skyline/nn/src/: lib.rs
skyline/nnsdk/: Cargo.toml
skyline/nnsdk/src/: extensions.rs  lib.rs
skyline/skyline_libc/: Cargo.toml
skyline/skyline_libc/src/: lib.rs
skyline/skyline_macro/: Cargo.toml
skyline/skyline_macro/src/: lib.rs
skyline/skyline_macro/src/attributes/: mod.rs
skyline/src/: alloc.rs  build.rs  extern_alloc.rs  hooks.rs  lib.rs  libc.rs  logging.rs  mod0.s  nn.rs
skyline/src/smash/: crc32.rs  mod.rs
skyline_smash/: Cargo.toml
skyline_smash/src/: cpp.rs  crc32.rs  lib.rs
source/: acmd_imports.h  acmd_imports.hpp  acmd_wrapper.hpp  const_value_table.h  crc32.h  hitbox_visualizer.h  hitbox_visualizer.hpp  l2c.h  l2c.hpp  l2c_imports.h  l2c_imports.hpp  lua_bind.h  lua_bind_hash.hpp  lua_helper.c  lua_helper.h  lua_helper.hpp  main.c  main.cpp  nn_ro.h  raygun_printer.c  raygun_printer.h  raygun_printer.hpp  saltysd_core.h  saltysd_dynamic.h  saltysd_helper.c  saltysd_helper.cpp  saltysd_helper.h  saltysd_helper.hpp  saltysd_ipc.h  script_replacement.hpp  taunt_toggles.h  training_mods.h  training_mods.hpp  useful.cpp  useful.h  useful_visual.cpp  useful_visual.h
source/hitbox/: visual.h
source/imports/app/: lua_bind.hpp  sv_animcmd.hpp  sv_math.hpp  sv_system.hpp
source/imports/app/lua_bind/: AbsorberModule.hpp  AreaModule.hpp  ArticleModule.hpp  AttackModule.hpp  CameraModule.hpp  CancelModule.hpp  CaptureModule.hpp  CatchModule.hpp  ColorBlendModule.hpp  ComboModule.hpp  ControlModule.hpp  DamageModule.hpp  EffectModule.hpp  FighterAreaModuleImpl.hpp  FighterControlModuleImpl.hpp  FighterMotionModuleImpl.hpp  FighterStatusModuleImpl.hpp  FighterStopModuleImpl.hpp  FighterWorkModuleImpl.hpp  GrabModule.hpp  GroundModule.hpp  HitModule.hpp  InkPaintModule.hpp  ItemModule.hpp  JostleModule.hpp  KineticModule.hpp  (+20 more)
source/imports/lib/: l2c.hpp  lua_bind_hash.hpp
source/lua/: lapi.c  lobject.h  lua.c  lua.h  luaconf.h
source/saltysd/: saltysd_core.h  saltysd_dynamic.h  saltysd_helper.hpp  saltysd_ipc.h
source/training/: common.h  common.hpp  directional_influence.h  directional_influence.hpp  input_recorder.h  input_recorder.hpp  ledge.h  ledge.hpp  mash.h  mash.hpp  save_states.h  save_states.hpp  selection.hpp  shield.h  shield.hpp  tech.h
source/useful/: const_value_table.h  raygun_printer.hpp  useful.h  visual.h
src/: lib.rs  logging.rs  sync.rs  test.rs
src/common/: button_config.rs  consts.rs  dev_config.rs  dialog.rs  events.rs  frame_counter.rs  hash.txt  input.rs  localization.rs  menu.rs  mod.rs  notifications.rs  offsets.rs  raygun_printer.rs  release.rs  release_example.json
src/hazard_manager/: mod.rs
src/hitbox_visualizer/: mod.rs
src/static/: info_training.bflyt  layout.arc  libtraining_modpack_menu.nro  training_mod_menu_input_log.bflyt
src/static/css/: training_modpack.css
src/static/js/: training_modpack.js
src/templates/: menu.html  slider.js
src/training/: DirectionalInfluence.rs  Ledge.rs  Mash.rs  SaveStates.rs  Shield.rs  Tech.rs  air_dodge_direction.rs  attack_angle.rs  buff.rs  charge.rs  clatter.rs  combo.rs  crouch.rs  debug.rs  directional_influence.rs  fast_fall.rs  frame_counter.rs  full_hop.rs  input_delay.rs  input_log.rs  input_record.rs  ledge.rs  left_stick.rs  mash.rs  mod.rs  reset.rs  save_states.rs  sdi.rs  shield.rs  shield_tilt.rs  tech.rs  throw.rs  ui.rs  ui_hacks.rs  visualizer.rs
src/training/character_specific/: bowser.rs  items.rs  kirby.rs  minmin.rs  mod.rs  pikmin.rs  ptrainer.rs  steve.rs
src/training/input_recording/: mod.rs  structures.rs
src/training/ui/: damage.rs  display.rs  input_log.rs  menu.rs  mod.rs  notifications.rs  resources.rs
training_mod_consts/: Cargo.toml
training_mod_consts/src/: config.rs  files.rs  lib.rs  options.rs
training_mod_metrics/: Cargo.toml
training_mod_metrics/src/: lib.rs  main.rs  parser.rs
training_mod_sync/: Cargo.toml
training_mod_sync/src/: lib.rs
training_mod_tui/: Cargo.toml
training_mod_tui/src/: gauge.rs  lib.rs  list.rs  main.rs  ui.rs
training_mod_tui/src/containers/: app.rs  mod.rs  submenu.rs  tab.rs
training_mod_tui/src/structures/: mod.rs  stateful_list.rs  stateful_slider.rs  stateful_table.rs
training_mod_tui/tests/: test_stateful_list.rs  test_stateful_slider.rs  test_stateful_table.rs  test_submenu.rs  test_toggle.rs
training_mod_tui_2/: Cargo.toml
training_mod_tui_2/src/: main.rs
training_mod_tui_2/src/containers/: app.rs  toggle.rs
training_mod_tui_2/src/structures/: stateful_list.rs  stateful_table.rs
training_mod_tui_2/tests/: test_stateful_list.rs  test_stateful_table.rs  test_submenu.rs  test_toggle.rs
(+9 files in other folders)
