[package]
name = "training_modpack"
version = "4.0.0"
authors = ["jugeeya <jugeeya@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", branch = "no-cache" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web.git" }
bitflags = "1.2.1"
parking_lot = { version = "0.12.0", features = ["nightly"] }
lazy_static = "1.4.0"
owo-colors = "2.1.0"
once_cell = "1.12.0"
ramhorns = "0.12.0"
paste = "1.0"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
wsl = "0.1.0"
strum = "0.21.0"
strum_macros = "0.21.0"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.9"
training_mod_consts = { path = "training_mod_consts" }
training_mod_tui = { path = "training_mod_tui" }

[patch.crates-io]
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", branch="switch" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/v0.3.0/libnro_hook.nro" },
    { name = "libparam_hook.nro", url = "https://github.com/ultimate-research/params-hook-plugin/releases/download/v0.1.1/libparam_hook.nro" },
    { name = "libnn_hid_hook.nro", url = "https://github.com/jugeeya/nn-hid-hook/releases/download/beta/libnn_hid_hook.nro" }
]

[features]
outside_training_mode = []
web_session_single_thread = []