[package]
name = "training_modpack"
version = "6.2.0"
authors = ["jugeeya <jugeeya@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/asimon-1/skyline-smash.git", branch = "13.0.3" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web.git" }
bitflags = "1.2.1"
parking_lot = { version = "0.12.0", features = ["nightly"] }
convert_case = "0.6.0"
include-flate = "0.1.4"
itertools = "0.11.0"
lazy_static = "1.4.0"
modular-bitfield = "0.11.2"
owo-colors = "2.1.0"
once_cell = "1.12.0"
paste = "1.0"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
wsl = "0.1.0"
strum = "0.21.0"
strum_macros = "0.21.0"
minreq = { version = "2", features = ["https-native", "json-using-serde"] }
sarc = { version = "1.2.0", features = [], default_features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smush_info_shared = { git = "https://github.com/jam1garner/smush_info_shared.git" }
toml = "0.5.9"
training_mod_consts = { path = "training_mod_consts" }
training_mod_sync = { path = "training_mod_sync" }
training_mod_tui = { path = "training_mod_tui" }
native-tls = { version = "0.2.11", features = ["vendored"] }
log = "0.4.17"
byte-unit = "4.0.18"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
anyhow = "1.0.72"
rust-i18n = "3.1.2"

[patch.crates-io]
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", branch = "switch-timeout-panic" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }
rand = { git = "https://github.com/skyline-rs/rand" }
getrandom = { git = "https://github.com/Raytwo/getrandom" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"
lto = "off"

[profile.release]
panic = "abort"
lto = true

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/v0.4.0/libnro_hook.nro" },
    { name = "libparam_hook.nro", url = "https://github.com/ultimate-research/params-hook-plugin/releases/download/v0.1.1/libparam_hook.nro" },
]

[package.metadata.i18n]
load-path = "locales"
default-locale = "en_us"
available-locales = ["en_us", "fr"]

[features]
outside_training_mode = []
layout_arc_from_file = []
