[package]
name = "skyline"
version = "0.0.1"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline_macro = { path = "./skyline_macro" }
nnsdk = { path = "./nnsdk" }
skyline_libc = { path = "./skyline_libc" }
