[package]
name = "training_mod_consts"
version = "0.1.0"
edition = "2018"

[dependencies]
byteflags = { git = "https://github.com/asimon-1/byteflags.git", branch = "rand-0.7.4" }
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = "1"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/austintraver/skyline-smash.git", optional = true }
toml = "0.5.9"
anyhow = "1.0.72"
rand = { git = "https://github.com/skyline-rs/rand" }
training_mod_sync = { path = "../training_mod_sync" }
training_mod_tui = { path = "../training_mod_tui" }

[features]
default = ["smash"]
smash = ["skyline_smash"]
