[package]
name = "training_mod_metrics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "10.0.0"
tokio = "1.20.0"
plotters = "0.3.2"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
reqwest = { version = "0.11.11", features = ["json"] }
flate2 = { version = "1.0" }
cloud-storage = "0.11.1"