[package]
name = "training_mod_tui_2"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
itertools = "0.11.0"
ratatui = { git = "https://github.com/tonogdlp/ratatui.git", branch = "single-cell" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
crossterm = { version = "0.22.1", optional = true }

[features]
default = ["crossterm", "ratatui/crossterm"]
has_terminal = ["crossterm", "ratatui/crossterm"]